# developer

./: CONTRIBUTE.md  FAQ.md  LICENSE.md  README.md  multi-platform.md
developer/: README.md
developer/solutions/infrastructure/: README.md
developer/solutions/infrastructure/containers-virtualization/: README.md
developer/solutions/infrastructure/containers-virtualization/mirantis/: README.md
developer/solutions/infrastructure/containers-virtualization/vmware/: README.md
developer/solutions/infrastructure/language-and-libraries/python/: README.md
documentation/docker-guide/: README.md  build.md  setup.md
giveaways/remoticon2020/: README.md
poc/: README.md  TEMPLATE.md
projects/: README.md
projects/infrastructure/ci-cd/: README.md
projects/infrastructure/containers-virtualization/kubernetes/: README.md
projects/infrastructure/containers-virtualization/rancher/: README.md
projects/infrastructure/developer-platforms/: README.md
projects/infrastructure/languages-and-libraries/python/: README.md
projects/infrastructure/networking/: README.md
projects/intruder_detection/: LICENSE  README.md  main.py  main_functions.cpp  rpi4.py  startup_script.py
projects/multi_domain_pico/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  readme.md
projects/multi_domain_pico/mult_domain/: CMakeLists.txt  audio_model.cc  audio_model.h  audio_model.tflite  main.cc  main_functions.cc  main_functions.h  video_model.cc  video_model_mobilenet.tflite  video_model_mobilenet_old.tflite  x_test_audio1.cc  x_test_audio2.h  x_test_video2.h
projects/multi_domain_pico/single_core/: CMakeLists.txt  main.cc  main_functions.cc  main_functions.h  test.cc  test_audio_model.cc  test_image_model.cc  video_model.h  video_model.tflite  video_model_mobilenet.cc  video_model_mobilenet.h  video_model_mobilenet_new.tflite  x_test_audio1.h  x_test_audio2.cc  x_test_video1.cc  x_test_video1.h  x_test_video2.cc
projects/multi_domain_pico/training/: audio_train.ipynb  video_train.ipynb
projects/portenta_person_detection/: .gitignore  README.md
projects/portenta_person_detection/image-server/: .gitignore  README.md  generate_image.js  main.py  requirements.txt  test.raw  wsgi.py
projects/portenta_person_detection/image-server/templates/: viewer.html
projects/portenta_person_detection/person_detection/: .gitignore  ImageCropper.cpp  ImageCropper.h  ImageScaler.cpp  ImageScaler.h  ImageSender.cpp  ImageSender.h  arduino_detection_responder.cpp  arduino_image_provider.cpp  config.h.template  person_detection.ino
projects/python-wheels/: multi-platform.md
projects/redis_benchmark/: README.md  create_cluster.sh  download_bench_files.sh  redis_benchmark_cluster.tf  ssh_redis_memtier.sh  ssh_redis_server.sh  terraform_variables.sh
projects/splunk_edge_demo/: .gitignore  README.md
projects/splunk_edge_demo/enterprise/: README.md
projects/splunk_edge_demo/enterprise/ansible/: splunk_ent_setup.yml
projects/splunk_edge_demo/enterprise/splunk_apps/edge_sensor_demo/appserver/static/: application.css
projects/splunk_edge_demo/enterprise/splunk_apps/edge_sensor_demo/default/: app.conf  savedsearches.conf
projects/splunk_edge_demo/enterprise/splunk_apps/edge_sensor_demo/local/: app.conf  readme.txt
projects/splunk_edge_demo/enterprise/splunk_apps/edge_sensor_demo/local/data/ui/nav/: default.xml
projects/splunk_edge_demo/enterprise/splunk_apps/edge_sensor_demo/local/data/ui/views/: edge_sensor_demo_dash.xml
projects/splunk_edge_demo/enterprise/splunk_config/: web.conf
projects/splunk_edge_demo/enterprise/splunk_deployment_apps/edge_array_input/default/: inputs.conf
projects/splunk_edge_demo/enterprise/splunk_deployment_apps/edge_array_output/default/: outputs.conf
projects/splunk_edge_demo/enterprise/splunk_inputs/: inputs.conf
projects/splunk_edge_demo/enterprise/terraform/tf-compute/: compute.tf  network.tf  output.tf  provider.tf  security_groups.tf  variables.tf
projects/splunk_edge_demo/fwd/: README.md
projects/splunk_edge_demo/fwd/ansible/: hosts  splunk_fwd_setup.yml
projects/splunk_edge_demo/fwd/local/: deploymentclient.conf  user-seed.conf
projects/splunk_edge_demo/python/: README.md  bme680.py  read_sensors.py  tsl2591.py
solutions/ai/: README.md
solutions/infrastructure/: README.md
solutions/infrastructure/languages-and-libraries/: README.md
solutions/infrastructure/languages-and-libraries/python/: multi-platform.md
solutions/infrastructure/operating-systems/: README.md
solutions/infrastructure/workloads/: README.md
solutions/iot/: README.md
solutions/iot/ai/pico/: README.md
solutions/iot/low-power/intruder_detection/: README.md
