# add the executable
add_executable(mult_domain
  main.cc
  main_functions.cc
  x_test_audio1.cc
  x_test_video1.cc
  x_test_video2.cc
  x_test_audio2.cc
  audio_model.cc
  video_model_mobilenet.cc
  tensorflow/lite/micro/simple_memory_allocator.cc
  tensorflow/lite/micro/micro_error_reporter.cc
  tensorflow/lite/micro/micro_interpreter.cc
  tensorflow/lite/micro/all_ops_resolver.cc
  tensorflow/lite/micro/memory_helpers.cc
  tensorflow/lite/micro/test_helpers.cc
  tensorflow/lite/micro/micro_time.cc
  tensorflow/lite/micro/recording_micro_allocator.cc
  tensorflow/lite/micro/recording_simple_memory_allocator.cc
  tensorflow/lite/micro/micro_string.cc
  tensorflow/lite/micro/micro_profiler.cc
  tensorflow/lite/micro/debug_log.cc
  tensorflow/lite/micro/micro_utils.cc
  tensorflow/lite/micro/system_setup.cc
  tensorflow/lite/micro/micro_allocator.cc
  tensorflow/lite/micro/memory_planner/linear_memory_planner.cc
  tensorflow/lite/micro/memory_planner/greedy_memory_planner.cc
  tensorflow/lite/c/common.c
  tensorflow/lite/core/api/error_reporter.cc
  tensorflow/lite/core/api/flatbuffer_conversions.cc
  tensorflow/lite/core/api/op_resolver.cc
  tensorflow/lite/core/api/tensor_utils.cc
  tensorflow/lite/kernels/internal/quantization_util.cc
  tensorflow/lite/kernels/kernel_util.cc
  tensorflow/lite/schema/schema_utils.cc
  tensorflow/lite/micro/kernels/activations.cc
  tensorflow/lite/micro/kernels/cmsis_nn/add.cc
  tensorflow/lite/micro/kernels/arg_min_max.cc
  tensorflow/lite/micro/kernels/batch_to_space_nd.cc
  tensorflow/lite/micro/kernels/cast.cc
  tensorflow/lite/micro/kernels/ceil.cc
  tensorflow/lite/micro/kernels/circular_buffer.cc
  tensorflow/lite/micro/kernels/comparisons.cc
  tensorflow/lite/micro/kernels/concatenation.cc
  tensorflow/lite/micro/kernels/cmsis_nn/conv.cc
  tensorflow/lite/micro/kernels/conv_test_common.cc
  tensorflow/lite/micro/kernels/cmsis_nn/depthwise_conv.cc
  tensorflow/lite/micro/kernels/dequantize.cc
  tensorflow/lite/micro/kernels/detection_postprocess.cc
  tensorflow/lite/micro/kernels/elementwise.cc
  tensorflow/lite/micro/kernels/ethosu.cc
  tensorflow/lite/micro/kernels/exp.cc
  tensorflow/lite/micro/kernels/flexbuffers_generated_data.cc
  tensorflow/lite/micro/kernels/floor.cc
  tensorflow/lite/micro/kernels/cmsis_nn/fully_connected.cc
  tensorflow/lite/micro/kernels/fully_connected_common.cc
  tensorflow/lite/micro/kernels/hard_swish.cc
  tensorflow/lite/micro/kernels/kernel_runner.cc
  tensorflow/lite/micro/kernels/kernel_util.cc
  tensorflow/lite/micro/kernels/l2norm.cc
  tensorflow/lite/micro/kernels/logical.cc
  tensorflow/lite/micro/kernels/logistic.cc
  tensorflow/lite/micro/kernels/maximum_minimum.cc
  tensorflow/lite/micro/kernels/cmsis_nn/mul.cc
  tensorflow/lite/micro/kernels/neg.cc
  tensorflow/lite/micro/kernels/pack.cc
  tensorflow/lite/micro/kernels/pad.cc
  tensorflow/lite/micro/kernels/cmsis_nn/pooling.cc
  tensorflow/lite/micro/kernels/prelu.cc
  tensorflow/lite/micro/kernels/quantize.cc
  tensorflow/lite/micro/kernels/quantize_common.cc
  tensorflow/lite/micro/kernels/reduce.cc
  tensorflow/lite/micro/kernels/reshape.cc
  tensorflow/lite/micro/kernels/resize_nearest_neighbor.cc
  tensorflow/lite/micro/kernels/round.cc
  tensorflow/lite/micro/kernels/shape.cc
  tensorflow/lite/micro/kernels/cmsis_nn/softmax.cc
  tensorflow/lite/micro/kernels/softmax_common.cc
  tensorflow/lite/micro/kernels/space_to_batch_nd.cc
  tensorflow/lite/micro/kernels/split.cc
  tensorflow/lite/micro/kernels/split_v.cc
  tensorflow/lite/micro/kernels/strided_slice.cc
  tensorflow/lite/micro/kernels/sub.cc
  tensorflow/lite/micro/kernels/cmsis_nn/svdf.cc
  tensorflow/lite/micro/kernels/svdf_common.cc
  tensorflow/lite/micro/kernels/tanh.cc
  tensorflow/lite/micro/kernels/transpose_conv.cc
  tensorflow/lite/micro/kernels/unpack.cc
  tensorflow/lite/micro/kernels/zeros_like.cc
  third_party/cmsis/CMSIS/NN/Source/ConcatenationFunctions/arm_concatenation_s8_z.c
  third_party/cmsis/CMSIS/NN/Source/ConcatenationFunctions/arm_concatenation_s8_y.c
  third_party/cmsis/CMSIS/NN/Source/ConcatenationFunctions/arm_concatenation_s8_x.c
  third_party/cmsis/CMSIS/NN/Source/ConcatenationFunctions/arm_concatenation_s8_w.c
  third_party/cmsis/CMSIS/NN/Source/SVDFunctions/arm_svdf_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_no_shift.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mult_q15.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_with_offset.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_depthwise_conv_nt_t_padded_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mat_mult_nt_t_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mult_q7.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nntables.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_accumulate_q7_to_q15.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mat_mul_core_4x_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_vec_mat_mult_t_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_add_q7.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_reordered_no_shift.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_depthwise_conv_nt_t_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mat_mul_core_1x_s8.c
  third_party/cmsis/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_reordered_with_offset.c
  third_party/cmsis/CMSIS/NN/Source/BasicMathFunctions/arm_elementwise_mul_s8.c
  third_party/cmsis/CMSIS/NN/Source/BasicMathFunctions/arm_elementwise_add_s8.c
  third_party/cmsis/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_s8.c
  third_party/cmsis/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_with_batch_q7.c
  third_party/cmsis/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_u8.c
  third_party/cmsis/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_q15.c
  third_party/cmsis/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_q7.c
  third_party/cmsis/CMSIS/NN/Source/ActivationFunctions/arm_relu_q15.c
  third_party/cmsis/CMSIS/NN/Source/ActivationFunctions/arm_relu_q7.c
  third_party/cmsis/CMSIS/NN/Source/ActivationFunctions/arm_relu6_s8.c
  third_party/cmsis/CMSIS/NN/Source/ActivationFunctions/arm_nn_activations_q15.c
  third_party/cmsis/CMSIS/NN/Source/ActivationFunctions/arm_nn_activations_q7.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q15.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q7.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q7_opt.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_mat_q7_vec_q15.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_mat_q7_vec_q15_opt.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q15_opt.c
  third_party/cmsis/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_s8.c
  third_party/cmsis/CMSIS/NN/Source/ReshapeFunctions/arm_reshape_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_3x3_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_1x1_s8_fast.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_separable_conv_HWC_q7_nonsquare.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_fast_nonsquare.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_fast_nonsquare.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_s8_s16.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_wrapper_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_q7_q15.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_fast.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_fast.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_1_x_n_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_basic_nonsquare.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_depthwise_conv_s8_core.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_u8_basic_ver1.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_s8_opt.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_wrapper_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_s8_s16_reordered.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_separable_conv_HWC_q7.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_RGB.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_1x1_HWC_q7_fast_nonsquare.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_s8.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_basic.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_basic.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_q7_q15_reordered.c
  third_party/cmsis/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_s8.c
  third_party/cmsis/CMSIS/NN/Source/PoolingFunctions/arm_avgpool_s8.c
  third_party/cmsis/CMSIS/NN/Source/PoolingFunctions/arm_pool_q7_HWC.c
  third_party/cmsis/CMSIS/NN/Source/PoolingFunctions/arm_max_pool_s8.c
)

add_compile_definitions(
  COMPILE_DEFINITIONS TF_LITE_DISABLE_X86_NEON=1
  COMPILE_DEFINITIONS TF_LITE_STATIC_MEMORY=1
  COMPILE_DEFINITIONS CMSIS_NN=1
)

set(COMPILE_FLAGS -fno-rtti -fno-exceptions -fno-threadsafe-statics -nostdlib)


include_directories(.
  third_party/cmsis/CMSIS/DSP/Include
  third_party/ruy
  third_party/gemmlowp
  third_party/kissfft
  third_party/flatbuffers
  third_party/cmsis/CMSIS/Core/Include
  third_party/cmsis
  third_party/flatbuffers/include
  third_party/cmsis/CMSIS/NN/Include
)


# Pull in our pico_stdlib which pulls in commonly used features
target_link_libraries(mult_domain pico_stdlib pico_multicore)

pico_enable_stdio_usb(mult_domain 1)
pico_enable_stdio_uart(mult_domain 0)

# create map/bin/hex file etc.
pico_add_extra_outputs(mult_domain)
